samples/_failures_safe/1761272319_de21b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc7f6b6e.c: In function ‘main’:
./samples/SAFE/__tmp_fc7f6b6e.c:132:5: error: expected expression at end of input
  132 |     for (
      |     ^~~
./samples/SAFE/__tmp_fc7f6b6e.c:132:5: error: expected declaration or statement at end of input
